--- a/week01_lab_LeTanPhat_21004661/pom.xml
+++ b/week01_lab_LeTanPhat_21004661/pom.xml
@@ -46,6 +46,17 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-testing</artifactId>
+            <version>6.0.2.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
